# tp-cpp-spring-2023

./: .gitignore  CMakeLists.txt  README.md  test.sh
inc/: AkasParser.h  PrincipalsParser.h  TSVParser.h  TitleBasicsParser.h  args.h  calculatables.h  expression_transformer.h  expression_tree.h  icalculatable.h  splitter.h  title.h  token.h  tokenizer.h
src/: AkasParser.cpp  PrincipalsParser.cpp  TSVParser.cpp  TitleBasicsParser.cpp  args.cpp  calculatables.cpp  expression_transformer.cpp  expression_tree.cpp  main.cpp  splitter.cpp  token.cpp  tokenizer.cpp
